--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,69 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&display=swap');
+
+:root {
+  /* colors */
+  --main-bg-color: #0b0d17;
+  --white: #fff;
+  --white-darker: rgba(255, 255, 255, 0.25);
+  --main-text-color: #d0d6f9;
+  /* fonts */
+  --heading-font: 'Bellefair';
+  /* sizes */
+  --hd-fs-xbg: 15rem;
+  --hd-fs-bg: 10rem;
+  --hd-fs-md: 5.6rem;
+  --hd-fs-sm: 3.2rem;
+  --hd-fs-xsm: 2.8rem;
+  --sb-fs-bg: 2.8rem;
+  --sb-fs-sm: 1.4rem;
+  --text-fs: 1.8rem;
+  --nav-fs: 1.6rem;
+}
+
+html {
+  min-width: 100%;
+  font-size: 62.5%;
+}
+
 body {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  font-family: 'Barlow Condensed';
+  color: var(--main-text-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  margin: 0;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+ul,
+li {
+  list-style: none;
+}
+button {
+  padding: 0;
+  margin: 0;
 }
 
 code {
