--- a/src/components/sections/CrewSection/index.css
+++ b/src/components/sections/CrewSection/index.css
@@ -1,12 +1,12 @@
-.sections-container {
+.crew-container {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
-.sections-container--left {
+.crew-container--left {
   margin-left: 16.5rem;
   margin-top: 7.6rem;
 }
-.sections-heading {
+.crew-heading {
   font-size: var(--sb-fs-bg);
   text-transform: uppercase;
   letter-spacing: 4.72px;
@@ -14,15 +14,15 @@
   margin-bottom: 9.7rem;
   color: var(--white);
 }
-.sections-heading > span {
+.crew-heading > span {
   color: var(--white-darker);
   font-weight: 700;
   margin-right: 2.8rem;
 }
 .crew-details {
   margin-top: 15.4rem;
-  max-width: 70rem;
-  margin-bottom: 22.9rem;
+  max-width: 63rem;
+  margin-bottom: 9.4rem;
 }
 .crew-details__sub-heading {
   font-family: var(--heading-font);
@@ -44,14 +44,13 @@
   font-weight: 400;
   line-height: 3.2rem;
   margin-top: 2.7rem;
-  max-width: 60%;
+  max-width: 70%;
   min-height: 13rem;
 }
 .crew-navigation {
   margin-top: 8.8rem;
 }
-.sections-container--right {
-  max-width: 40.5rem;
-  margin-right: 16.5rem;
-  margin-top: 17.4rem;
+.crew-container--right {
+  display: flex;
+  align-items: flex-end;
 }
