--- a/src/components/PagesWrapper/index.css
+++ b/src/components/PagesWrapper/index.css
@@ -4,11 +4,10 @@
   justify-content: center;
   min-width: 100%;
   min-height: 100vh;
-  /* background-color: var(--main-bg-color); */
   position: relative;
 }
 .blur {
-  width: 88rem;
+  width: 61.11%;
   height: 9.6rem;
   position: absolute;
   top: 6.2rem;
@@ -17,3 +16,23 @@
   backdrop-filter: blur(40.7742px);
   -webkit-backdrop-filter: blur(40.7742px);
 }
+@media only screen and (max-width: 1200px) {
+  .blur {
+    width: 64.11%;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .blur {
+    width: 80.11%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .main {
+    min-height: 100%;
+  }
+  .blur {
+    max-width: 45rem;
+    top: 0;
+  }
+}
+
