--- a/src/components/ui/MainBtn/index.css
+++ b/src/components/ui/MainBtn/index.css
@@ -6,8 +6,7 @@
   font-weight: 400;
   border-radius: 50%;
   text-transform: uppercase;
-  width: 27.4rem;
-  height: 27.4rem;
+  padding: 110px 60px;
   display: block;
   position: relative;
   cursor: pointer;
@@ -15,18 +14,45 @@
 .main-btn:hover::after {
   content: '';
   display: block;
-  height: 45rem;
+  height: 25rem;
   width: 45rem;
   position: absolute;
   left: -50%;
   top: -50%;
-  transform: translate(10%, 10%);
+  transform: translate(8%, 8%);
   background: var(--white);
   opacity: 0.1;
   border-radius: 50%;
   transition: all 0.4s ease-out;
 }
-/* .main-btn:hover {
-  box-shadow: 0 0 0px rgba(255, 255, 255, 0.5);
-  transition: all 0.2s ease-out;
-} */
+
+@media only screen and (max-width: 1200px) {
+  .main-btn {
+    padding: 95px 50px;
+  }
+  .main-btn:hover::after {
+    transform: translate(18%, 17%);
+    height: 35rem;
+    width: 35rem;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .main-btn {
+    padding: 90px 50px;
+  }
+  .main-btn:hover::after {
+    transform: translate(13%, 10%);
+    height: 40rem;
+    width: 40rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .main-btn {
+    padding: 95px 50px;
+  }
+  .main-btn:hover::after {
+    transform: translate(17%, 15%);
+    height: 35rem;
+    width: 35rem;
+  }
+}
