--- a/src/components/ui/TechNavBtn/index.css
+++ b/src/components/ui/TechNavBtn/index.css
@@ -13,3 +13,13 @@
   background-color: var(--white);
   color: #000;
 }
+@media only screen and (max-width: 768px) {
+  .techBtn {
+    width: 6rem;
+    height: 6rem;
+  }
+  .techBtn:not(:last-child) {
+    margin-bottom: 0;
+    margin-right: 1.6rem;
+  }
+}
