refactor: fix main button shade and destination nav position

--- a/src/components/NavigationLink/index.css
+++ b/src/components/NavigationLink/index.css
@@ -19,5 +19,9 @@
 }
 .destination__link-container {
   display: flex;
-  justify-content: center;
+}
+@media only screen and (max-width: 768px) {
+  .destination__link-container {
+    justify-content: center;
+  }
 }
