--- a/src/components/Heading/index.css
+++ b/src/components/Heading/index.css
@@ -39,6 +39,18 @@
     margin: 2.4rem 0;
   }
 }
+@media only screen and (max-width: 1024px) {
+  .heading-container {
+    margin: 21.5rem 10.5rem 21.5rem;
+  }
+  .hd-fs-xsm {
+    font-size: 2.8rem;
+  }
+  .hd-fs-xbg {
+    font-size: var(--hd-fs-bg);
+    margin: 2.4rem 0;
+  }
+}
 @media only screen and (max-width: 768px) {
   .heading-container {
     margin: 14.5rem 15.9rem 9rem;
@@ -54,6 +66,31 @@
   }
   .text-fs {
     font-size: 1.6rem;
+    text-align: center;
+  }
+}
+@media only screen and (max-width: 520px) {
+  .heading-container {
+    margin: 4.8rem 7.9rem 0;
+    flex-direction: column;
+    align-items: center;
+  }
+  .info-container {
+    margin-bottom: 7.1rem;
+    align-items: center;
+  }
+  .hd-fs-xsm {
+    font-size: 1.6rem;
+    line-height: 1.9rem;
+  }
+  .hd-fs-xbg {
+    font-size: 8rem;
+    line-height: 10rem;
+    margin: 1.6rem 0;
+  }
+  .text-fs {
+    font-size: 1.5rem;
+    line-height: 2.5rem;
     text-align: center;
   }
 }
