--- a/src/components/MainWrapper/index.css
+++ b/src/components/MainWrapper/index.css
@@ -33,8 +33,16 @@
     min-height: 100%;
   }
   .blur {
-    /* height: 9.9rem; */
-    width: 45rem;
+    width: 60rem;
     top: 0;
+  }
+}
+@media only screen and (max-width: 375px) {
+  .main {
+    background-image: url('../../assets/home/background-home-mobile.jpg');
+    min-height: 100%;
+  }
+  .blur {
+    display: none;
   }
 }
