--- a/src/components/Navigation/index.css
+++ b/src/components/Navigation/index.css
@@ -83,8 +83,62 @@
     margin: 0 4.6rem 0 3.9rem;
   }
 }
-@-moz-document url-prefix() {
+@media only screen and (max-width: 520px) {
+  .navigation ul span {
+    display: none;
+  }
+  .navigation ul li a {
+    font-size: 1.4rem;
+    letter-spacing: 0.236rem;
+  }
+  .navigation ul li {
+    padding: 3.6rem 0;
+  }
+  .active {
+    padding: 3.6rem 0;
+  }
+  .navigation ul li:not(:last-child) {
+    margin-right: 3.7rem;
+  }
   .navigation-container {
-    margin: 0 4.6rem 0 3.9rem;
+    margin: 0;
+  }
+}
+@media only screen and (max-width: 520px) {
+  .navigation {
+    width: 100%;
+    justify-content: center;
+    margin-top: 11.8rem;
+    align-items: inherit;
+  }
+  .navigation ul {
+    display: flex;
+    flex-direction: column;
+  }
+  .navigation ul span {
+    margin-right: 1.1rem;
+    display: inherit;
+  }
+  .navigation ul span,
+  .navigation ul li a {
+    font-size: 1.6rem;
+    letter-spacing: 0.192rem;
+    text-transform: uppercase;
+    letter-spacing: 2.7px;
+  }
+  .navigation ul li {
+    padding: 1rem 0;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.2s ease-out;
+  }
+  .navigation ul li:not(:last-child) {
+    margin-bottom: 3.2rem;
+  }
+  .navigation ul li:hover {
+    border-bottom: 2px solid var(--white-darker);
+  }
+  .active {
+    padding: 1rem 0;
+    border-bottom: 2px solid var(--white) !important;
   }
 }
