--- a/src/components/sections/CrewSection/index.css
+++ b/src/components/sections/CrewSection/index.css
@@ -78,19 +78,20 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    position: relative;
   }
   .crew-container--left {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-left: 0;
-    margin-top: 0;
+    margin-top: 12.6rem;
     text-align: center;
   }
   .crew-heading {
-    margin-left: -45.9rem;
-    margin-bottom: 6rem;
-    margin-top: 5.3rem;
+    position: absolute;
+    top: 5.3rem;
+    left: 4.18rem;
     font-size: 2rem;
   }
   .crew-heading span {
