--- a/src/components/sections/DestinationSection/index.css
+++ b/src/components/sections/DestinationSection/index.css
@@ -48,7 +48,7 @@
   margin-bottom: 11.8rem;
 }
 .destination-details--left {
-  margin-right: 5.48%;
+  margin-right: 20.48%;
 }
 .sb-fs-md {
   font-size: var(--sb-fs-sm);
@@ -74,14 +74,16 @@
   .destination-container {
     flex-direction: column;
     align-items: center;
+    position: relative;
   }
   .destination-container--left {
     margin-left: 1.5rem;
     margin-top: 5.3rem;
   }
   .destination-heading {
-    margin-left: -20rem;
-    margin-bottom: 6rem;
+    position: absolute;
+    top: 5.3rem;
+    left: 4.18rem;
     font-size: 2rem;
   }
   .destination-heading > span {
@@ -113,6 +115,7 @@
   .destination-image img {
     width: 30rem;
     height: 30rem;
+    margin-top: 12.6rem;
   }
   .destination-details {
     width: 100%;
