--- a/src/components/ui/Logo/index.css
+++ b/src/components/ui/Logo/index.css
@@ -1,3 +1,10 @@
 .logo {
   display: inline;
 }
+@media only screen and (max-width: 520px) {
+  .logo {
+    scale: 0.83333;
+    margin-top: 2.4rem;
+    margin-left: 2.4rem;
+  }
+}
