--- a/src/components/ui/MainBtn/index.css
+++ b/src/components/ui/MainBtn/index.css
@@ -57,3 +57,15 @@
     width: 35rem;
   }
 }
+@media only screen and (max-width: 520px) {
+  .main-btn {
+    padding: 65px 38px;
+    margin-bottom: 4.8rem;
+    font-size: 2rem;
+  }
+  .main-btn:hover::after {
+    transform: translate(30%, 26%);
+    height: 20rem;
+    width: 20rem;
+  }
+}
