--- a/src/components/sections/DestinationSection/index.css
+++ b/src/components/sections/DestinationSection/index.css
@@ -64,12 +64,18 @@
   line-height: 3.2rem;
   text-transform: uppercase;
 }
+
+/* ******************************************************* */
+
 @media only screen and (max-width: 1200px) {
   .destination-image img {
     width: 35.5rem;
     height: 35.5rem;
   }
 }
+
+/* ******************************************************* */
+
 @media only screen and (max-width: 768px) {
   .destination-container {
     flex-direction: column;
@@ -89,18 +95,21 @@
   .destination-heading > span {
     margin-right: 1.6rem;
   }
+  .destination-image {
+    margin-left: 0;
+  }
+  .destination-image img {
+    width: 30rem;
+    height: 30rem;
+    margin-top: 12.6rem;
+  }
   .destination-description {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     margin-top: 0;
   }
   .dest-heading {
     font-size: 8rem;
   }
   .dest-description {
-    min-height: 0;
     text-align: center;
     font-size: var(--nav-fs);
     min-height: 10rem;
@@ -111,11 +120,6 @@
     margin-top: 5.3rem;
     display: flex;
     flex-direction: column;
-  }
-  .destination-image img {
-    width: 30rem;
-    height: 30rem;
-    margin-top: 12.6rem;
   }
   .destination-details {
     width: 100%;
@@ -128,5 +132,84 @@
   }
   .destination-details--right {
     text-align: center;
+  }
+}
+
+/* ******************************************************* */
+
+@media only screen and (max-width: 520px) {
+  .destination-container {
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+  }
+  .destination-container--left {
+    margin-left: 1.5rem;
+    margin-top: 5.3rem;
+  }
+  .destination-heading {
+    position: absolute;
+    top: 2.4rem;
+    left: 4.18rem;
+    font-size: 1.6rem;
+    margin-bottom: 0;
+  }
+  .destination-heading > span {
+    margin-right: 1.8rem;
+  }
+  .destination-image {
+    margin-left: 0;
+  }
+  .destination-image img {
+    width: 17rem;
+    height: 17rem;
+    margin-top: 3.2rem;
+  }
+  .destination-container--right {
+    max-width: 50rem;
+    margin-right: 0;
+    margin-top: 5.3rem;
+    display: flex;
+    flex-direction: column;
+  }
+  .destination-description {
+    align-items: center;
+    justify-content: center;
+    margin-top: 0;
+    padding-bottom: 3.2rem;
+  }
+  .dest-heading {
+    font-size: 5.6rem;
+    text-align: center;
+  }
+  .dest-description {
+    font-size: 1.5rem;
+    min-height: 10rem;
+    max-width: 90%;
+    margin: 0 auto;
+  }
+  .destination-details {
+    width: 100%;
+    margin-bottom: 6.2rem;
+    justify-content: space-around;
+  }
+  .destination-details--left {
+    text-align: center;
+    margin-right: 0;
+  }
+  .sb-fs-md {
+    font-size: 1.4rem;
+  }
+  .destination-details--right {
+    text-align: center;
+  }
+  .destination-details {
+    width: 90%;
+    flex-direction: column;
+    margin: 0 auto 5.8rem;
+    border-top: 1px solid var(--white-darker);
+  }
+  .distance {
+    font-size: 2.8rem;
   }
 }
