--- a/src/components/sections/TechSection/index.css
+++ b/src/components/sections/TechSection/index.css
@@ -77,6 +77,9 @@
     margin-right: 3rem;
   }
 }
+
+/* ******************************************************* */
+
 @media only screen and (max-width: 768px) {
   .tech-container {
     display: flex;
@@ -88,6 +91,9 @@
     margin-left: 0;
     margin-top: 0;
     order: 2;
+  }
+  .destination-description {
+    border: none;
   }
   .tech-heading {
     font-size: 2rem;
@@ -138,5 +144,41 @@
   }
   .tech-container--right img {
     margin-top: 12.6rem;
+  }
+}
+
+/* ******************************************************* */
+
+@media only screen and (max-width: 520px) {
+  .tech-heading {
+    font-size: 1.6rem;
+    top: 2.4rem;
+  }
+  .tech-details {
+    margin-top: 3.2rem;
+  }
+  .tech-details__details-container {
+    margin-top: 2.6rem;
+    margin-bottom: 8.1rem;
+  }
+  .tech-details__sub-heading {
+    font-size: 1.4rem;
+    line-height: 1.68rem;
+  }
+  .tech-details__heading {
+    font-size: 2.4rem;
+    line-height: 2.75rem;
+    margin-top: 0.9rem;
+  }
+  .tech-details__details {
+    font-size: 1.5rem;
+    line-height: 2.5rem;
+    max-width: 90%;
+    margin: 1.6rem auto 0;
+    min-height: auto;
+  }
+  .tech-container--right img {
+    margin-top: 7.5rem;
+    height: 17rem;
   }
 }
