--- a/src/components/ui/CrewNavBtn/index.css
+++ b/src/components/ui/CrewNavBtn/index.css
@@ -8,6 +8,12 @@
 .crewBtn:not(:last-child) {
   margin-right: 2.4rem;
 }
-.crew-active{
+.crew-active {
   background-color: var(--white);
+}
+@media only screen and (max-width: 520px) {
+  .crewBtn {
+    width: 1rem;
+    height: 1rem;
+  }
 }
