--- a/src/components/ui/TechNavBtn/index.css
+++ b/src/components/ui/TechNavBtn/index.css
@@ -23,3 +23,9 @@
     margin-right: 1.6rem;
   }
 }
+@media only screen and (max-width: 520px) {
+  .techBtn {
+    width: 4rem;
+    height: 4rem;
+  }
+}
